<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- Reads the screen aloud: the one control a farmer who can't read needs -->
    <item
        android:id="@+id/action_listen"
        android:icon="@drawable/ic_volume_up"
        android:title="@string/voice_listen"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_language"
        android:icon="@drawable/ic_translate"
        android:title="@string/action_language"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_theme"
        android:icon="@drawable/ic_palette"
        android:title="@string/action_theme"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_voice"
        android:icon="@drawable/ic_record_voice"
        android:title="@string/voice_settings_title"
        app:showAsAction="never" />
</menu>
